// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fontSizeRulesForTokens Theme: jobStreet Rules 1`] = `
Object {
  ".interaction": Object {
    "fontSize": "14px",
    "lineHeight": "20px",
    "paddingBottom": "12px",
    "paddingTop": "12px",
  },
  ".large": Object {
    "fontSize": "16px",
    "lineHeight": "24px",
  },
  ".standard": Object {
    "fontSize": "14px",
    "lineHeight": "20px",
  },
}
`;

exports[`fontSizeRulesForTokens Theme: seekAnz Rules 1`] = `
Object {
  ".interaction": Object {
    "fontSize": "16px",
    "lineHeight": "24px",
    "paddingBottom": "12px",
    "paddingTop": "12px",
  },
  ".large": Object {
    "fontSize": "18px",
    "lineHeight": "24px",
  },
  ".standard": Object {
    "fontSize": "16px",
    "lineHeight": "24px",
  },
}
`;

exports[`fontSizeRulesForTokens Theme: seekAsia Rules 1`] = `
Object {
  ".interaction": Object {
    "fontSize": "16px",
    "lineHeight": "24px",
    "paddingBottom": "10px",
    "paddingTop": "10px",
  },
  ".large": Object {
    "fontSize": "18px",
    "lineHeight": "24px",
  },
  ".standard": Object {
    "fontSize": "16px",
    "lineHeight": "24px",
  },
  "@media screen and (min-width: 768px)": Object {
    ".large": Object {
      "fontSize": "20px",
      "lineHeight": "28px",
    },
  },
}
`;

exports[`fontSizeRulesForTokens Theme: wireframe Rules 1`] = `
Object {
  ".interaction": Object {
    "fontSize": "16px",
    "lineHeight": "24px",
    "paddingBottom": "12px",
    "paddingTop": "12px",
  },
  ".large": Object {
    "fontSize": "18px",
    "lineHeight": "24px",
  },
  ".standard": Object {
    "fontSize": "16px",
    "lineHeight": "24px",
  },
}
`;
